<resources>
    <string name="app_name">Tangem ID</string>

    <string name="credential_photo">Photo</string>
    <string name="credential_personal_info">Personal Information</string>
    <string name="credential_personal_info_name">Name</string>
    <string name="credential_personal_info_surname">Surname</string>
    <string name="credential_personal_info_gender">Gender</string>
    <string name="credential_personal_info_gender_male">Male</string>
    <string name="credential_personal_info_gender_female">Female</string>
    <string name="credential_personal_info_gender_other">Other</string>
    <string name="credential_personal_info_date_of_birth">Date of birth</string>

    <string name="credential_ssn">SSN</string>
    <string name="credential_ssn_hint" translatable="false">000-00-0000</string>
    <string name="credential_age_of_majority">Age Over 21</string>
    <string name="credential_valid">Valid</string>
    <string name="credential_valid_until">Valid until %s</string>
    <string name="credential_valid_from">Valid from %s</string>
    <string name="credential_covid">Covid 19 Immunity Passport</string>
    <string name="credential_ninja">Verified Credential Ninja Card</string>
    <string name="credential_dialog_share">Share</string>
    <string name="credential_dialog_hide">Hide</string>

    <string name="starting_screen_description">This application demonstrates the Tangem ID solution.
        Conformant with W3C DID and Verifiable Credential. Try for yourself! Get ID cards kit at %s</string>
    <string name="starting_screen_store_address">shop.tangem.com</string>
    <string name="starting_screen_btn_issuer">I\'m an issuer</string>
    <string name="starting_screen_btn_holder">I\'m a holder</string>
    <string name="starting_screen_btn_verifier">I\'m a verifier</string>

    <string name="holder_screen_toolbar">Personal Card</string>
    <string name="holder_screen_btn_request">Request New Credential</string>
    <string name="holder_screen_btn_save">Save Changes</string>
    <string name="holder_screen_credentials_title">Credentials</string>
    <string name="holder_screen_menu_change_pin">Change Passcode</string>
    <string name="holder_screen_notification_request_credential_success">New credential has been added</string>
    <string name="holder_screen_notification_save_changes_success">Changes have been saved</string>
    <string name="holder_screen_notification_change_passcode_success">Passcode has been changed</string>
    <string name="holder_screen_notification_no_camera_permission">You must grant camera permission to scan QR Code</string>
    <string name="holder_screen_dialog_show_json">Show JSON</string>
    <string name="holder_screen_dialog_show_raw_token">Show raw token</string>


    
    <string name="issuer_screen_toolbar">Issuer\'s Details</string>
    <string name="issuer_screen_title">DID Address of the Issuer</string>
    <string name="issuer_screen_btn_issue">Issue Credentials</string>

    <string name="issue_credentials_screen_toolbar">Issue Credentials</string>
    <string name="issue_credentials_photo_btn_add">Add photo</string>
    <string name="issue_credentials_btn_sign">Sign</string>
    <string name="issue_credentials_btn_write">Write Credentials</string>
    <string name="issue_credentials_btn_json">Show Credentials JSON</string>
    <string name="issue_credentials_notification_write_success">Credentials have been issued</string>
    <string name="issue_credentials_notification_sign_success">You have created and signed credentials. Now write them on a holder\'s card</string>
    <string name="issue_credentials_notification_no_camera_permission">You must grant camera permission to take photo</string>
    <string name="issue_credentials_notification_incomplete_form">You must fill in all data in the form</string>
    <string name="issue_credentials_dialog_go_back">Do you want to go back and cancel your input?</string>
    <string name="issuer_credentials_date_error">Date format is MM/dd/yyyy</string>
    <string name="issue_credentials_ssn_error">SSN is XXX-XX-XXXX</string>

    <string name="verifier_screen_toolbar">ID Validator</string>
    <string name="verifier_screen_status">Status: %s</string>
    <string name="verifier_screen_status_valid">Valid</string>
    <string name="verifier_screen_status_invalid">Invalid</string>
    <string name="verifier_screen_status_revoked">Revoked</string>
    <string name="verifier_screen_status_offline">Offline</string>
    <string name="verifier_screen_issued_by">Issued by %1s issuer\n%2s</string>
    <string name="verifier_screen_issuer_trusted">Trusted</string>
    <string name="verifier_screen_issuer_unknown">Unknown</string>
    <string name="verifier_screen_btn_json">Show Presentation JSON</string>
    <string name="verifier_screen_btn_json_description">Current presentation of credentials can be stored.</string>

    <string name="request_credentials_screen_toolbar">Request Credentials</string>
    <string name="request_credentials_status_prepare">Preparing data for credentials issuance</string>
    <string name="request_credentials_status_issue">Please wait while credentials are being issued</string>

</resources>