<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="24dp">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        style="@style/Widget.MaterialComponents.Toolbar.Surface"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:navigationIcon="@drawable/ic_baseline_arrow_back_24"
        app:title="@string/verifier_screen_toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="56dp"
        android:paddingBottom="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <include
                android:id="@+id/layout_photo"
                layout="@layout/layout_photo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <include
                android:id="@+id/layout_passport"
                layout="@layout/layout_passport"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <include
                android:id="@+id/layout_ssn"
                layout="@layout/layout_ssn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <include
                android:id="@+id/layout_age_of_majority"
                layout="@layout/layout_checkbox_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <include
                android:id="@+id/layout_covid"
                layout="@layout/layout_covid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />


            <include
                android:id="@+id/layout_ninja"
                layout="@layout/layout_ninja"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_presentation_json"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:layout_marginStart="46dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="46dp"
                android:layout_marginBottom="8dp"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:letterSpacing="0"
                android:text="@string/verifier_screen_btn_json"
                android:textAllCaps="false"
                android:textColor="@color/blue"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_presentation_json"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="40dp"
                android:text="@string/verifier_screen_btn_json_description"
                android:textAlignment="center"
                android:textColor="@color/darkGray6"
                android:textSize="12sp" />

        </LinearLayout>

    </ScrollView>


</FrameLayout>