<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fl_covid"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_covid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:elevation="3dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minWidth="300dp">

            <TextView
                android:id="@+id/tv_covid_title"
                android:layout_width="match_parent"
                android:layout_height="58dp"
                android:layout_gravity="center"
                android:gravity="start|center_vertical"
                android:lineSpacingExtra="6sp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:text="@string/credential_covid"
                android:textColor="@color/darkGray6"
                android:textSize="17sp"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_covid_description"
                android:layout_width="match_parent"
                android:layout_height="58dp"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:gravity="start|center_vertical"
                android:lineSpacingExtra="5sp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:text="@string/credential_valid"
                android:textColor="@color/darkGray5"
                android:textSize="16sp"
                app:layout_constraintTop_toBottomOf="@+id/tv_covid_title" />

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/checkbox_covid"
                android:layout_width="wrap_content"
                android:layout_height="58dp"
                android:layout_gravity="center"
                android:enabled="false"
                app:buttonTint="@color/checkbox_always_accent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_covid_title" />

            <View
                android:id="@+id/v_separator_covid"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:background="@color/separatorGrey"
                app:layout_constraintTop_toBottomOf="@id/tv_covid_description" />

            <include
                android:id="@+id/l_credential_status_covid"
                layout="@layout/layout_credential_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/tv_covid_description" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_covid_json"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_gravity="end"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:text="@string/holder_screen_dialog_show_json"
                android:textAllCaps="false"
                android:textColor="@color/blue"
                android:textSize="16sp"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/l_credential_status_covid" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>
</FrameLayout>